--- a/themes/openy_themes/openy_rose/scss/modules/_paragraphs.scss
+++ b/themes/openy_themes/openy_rose/scss/modules/_paragraphs.scss
@@ -926,3 +926,24 @@
     }
   }
 }
+
+.paragraph--type--video-player .field-media-local-video {
+  padding: 20px;
+}
+
+.sidebar-region {
+  .video-js {
+    width: 100% !important;
+    height: 270px !important;
+  }
+  .video-js.vjs-fullscreen {
+    width: 100%!important;
+    height: 100%!important;
+    padding-top: 0!important;
+  }
+}
+
+.vjs-tech {
+  width: 100% !important;
+  height: 100% !important;
+}
