--- a/docroot/modules/custom/ymca_membership/templates/membership-page.html.twig
+++ b/docroot/modules/custom/ymca_membership/templates/membership-page.html.twig
@@ -90,6 +90,7 @@
             <a href="#modal_blaisdell">Blaisdell</a><br />
             <a href="#modal_burnsville">Burnsville</a><br />
             <a href="#modal_cora_mccorvey_ymca"><span>Cora McCorvey YMCA</span></a><br />
+            <a href="#modal_the_dayton_y"><span>The Dayton Y</span></a><br />
             <a href="#modal_eagan"><span>Eagan</span></a><br />
             <a href="#modal_elk_river"><span>Elk River</span></a><br />
             <a href="#modal_coon_rapids"><span>Emma B. Howe—Coon Rapids</span></a><br />
@@ -103,10 +104,10 @@
           <p><a href="#modal_hudson"><span>Hudson, WI</span></a><br />
             <a href="#modal_lino_lakes"><span>Lino Lakes</span></a><br />
             <a href="#modal_maplewood"><span>Maplewood Community Center</span></a><br />
-            <a href="#modal_minneapolis_downtown"><span>Minneapolis Downtown</span></a><br />
             <a href="#modal_new_hope"><span>New Hope</span></a><br />
             <a href="#modal_ridgedale"><span>Ridgedale—Minnetonka</span></a><br />
             <a href="#modal_river_valley"><span>River Valley—Prior Lake</span></a><br />
+            <a href="#modal_rochester"><span>Rochester</span></a><br />
             <a href="#modal_shoreview"><span>Shoreview</span></a>
           </p>
         </article>
@@ -1678,6 +1679,93 @@
             </tr></tbody></table></article>
         <h3 id="component_347386">Featured Amenities</h3>
         <article class="richtext" id="component_347387"><p>Fitness Center<br />Indoor Pools<br />Sauna<br />Gym<br />Running/Walking Track</p></article>
+        <article class="richtext" id="component_347388"><p><a href="http://www.ymcatwincities.org/locations/woodbury_ymca/">Go to detailed location page</a><br /><a href="http://www.ymcatwincities.org/membership/amenities/">View all location amenities</a></p></article>
+
+      </section>
+
+    </article>
+
+  </article>
+
+</article>
+
+<article class="content_wrapper modal-container" id="component_3473501">
+  <article class="content_wrapper modal-header" id="component_3473521">
+    <h2 id="component_3473541">The Dayton Y</h2>
+    <hr />
+    <span class="plaintext" id="component_347356">612-492-2047</span>
+    <span class="plaintext" id="component_347357">651 Nicollet Mall Ste. 300, Minneapolis, MN 55402</span>
+    <a href="https://goo.gl/maps/kj4vfLyq4wp" class="link-component">Directions</a>
+
+  </article>
+  <article class="content_wrapper modal-body" id="component_347369">
+    <article id="component_347371" class="row content_group">
+
+
+      <section id="group_0_347371" class="col-md-6 col-sm-6">
+
+        <img src="{{ assets_path }}/lightbox-photo-dayton-1.jpg" class="img-responsive" alt="" title="" border="0"/>
+
+      </section>
+
+
+      <section id="group_1_347371" class="col-md-6 col-sm-6">
+
+
+
+
+        <h3 id="component_347384">Hours</h3>
+        <article class="richtext" id="component_347385"><table border="0"><tbody><tr><td>Mon – Fri:</td>
+              <td>5am – 10pm</td>
+            </tr><tr><td>Sat – Sun:</td>
+              <td>7am – 8pm</td>
+            </tr></tbody></table></article>
+        <h3 id="component_347386">Featured Amenities</h3>
+        <article class="richtext" id="component_347387"><p>Advanced fitness training studio<br />Virtual reality workout equipment<br /> Virtual group cycle and multi-sensory studios<br />Indoor Lap pool<br />Sauna<br />Whirlpool<br />Gym</p></article>
+        <article class="richtext" id="component_347388"><p><a href="//www.ymcamn.org/locations/dayton_y">Go to detailed location page</a><br /><a href="//www.ymcamn.org/membership/amenities">View all location amenities</a></p></article>
+
+      </section>
+
+    </article>
+
+  </article>
+
+</article>
+
+
+<article class="content_wrapper modal-container" id="component_347350">
+  <article class="content_wrapper modal-header" id="component_347352">
+    <h2 id="component_347354">Rochester</h2>
+    <hr />
+    <span class="plaintext" id="component_347356">507-287-2260</span>
+    <span class="plaintext" id="component_347357">709 1st Avenue SW, Rochester, MN 55902</span>
+    <a href="https://goo.gl/maps/yaevTFMVHFU2" class="link-component">Directions</a>
+
+  </article>
+  <article class="content_wrapper modal-body" id="component_347369">
+    <article id="component_347371" class="row content_group">
+
+
+      <section id="group_0_347371" class="col-md-6 col-sm-6">
+        <img src="{{ assets_path }}/lightbox-photo-rochester-1.jpg" class="img-responsive" alt="" title="" border="0"/>
+      </section>
+
+
+      <section id="group_1_347371" class="col-md-6 col-sm-6">
+
+
+
+
+        <h3 id="component_347384">Hours</h3>
+        <article class="richtext" id="component_347385"><table border="0"><tbody><tr><td>Mon – Fri:</td>
+              <td>5am – 10pm</td>
+            </tr><tr><td>Sat:</td>
+              <td>6am – 8pm</td>
+              </tr><tr><td>Sun</td>
+              <td>8am – 8pm</td>
+            </tr></tbody></table></article>
+        <h3 id="component_347386">Featured Amenities</h3>
+        <article class="richtext" id="component_347387"><p>Fitness Center<br />Indoor Pool<br />Whirlpool<br />Massage<br />Running/Walking Track<br />Racquetball – Handball Courts</p></article>
         <article class="richtext" id="component_347388"><p><a href="http://www.ymcatwincities.org/locations/woodbury_ymca/">Go to detailed location page</a><br /><a href="http://www.ymcatwincities.org/membership/amenities/">View all location amenities</a></p></article>
 
       </section>
