Fix base path for assets

--- a/docroot/modules/custom/ymca_membership/templates/membership-page.html.twig
+++ b/docroot/modules/custom/ymca_membership/templates/membership-page.html.twig
@@ -1704,7 +1704,7 @@
 
       <section id="group_0_347371" class="col-md-6 col-sm-6">
 
-        <img src="{{ assets_path }}/lightbox-photo-dayton-1.jpg" class="img-responsive" alt="" title="" border="0"/>
+        <img src="{{ base_path }}/sites/default/files/lightbox-photo-dayton-1.jpg" class="img-responsive" alt="" title="" border="0"/>
 
       </section>
 
@@ -1747,7 +1747,7 @@
 
 
       <section id="group_0_347371" class="col-md-6 col-sm-6">
-        <img src="{{ assets_path }}/lightbox-photo-rochester-1.jpg" class="img-responsive" alt="" title="" border="0"/>
+        <img src="{{ base_path }}/sites/default/files/lightbox-photo-rochester-1.jpg" class="img-responsive" alt="" title="" border="0"/>
       </section>
 
 
@@ -1766,7 +1766,7 @@
             </tr></tbody></table></article>
         <h3 id="component_347386">Featured Amenities</h3>
         <article class="richtext" id="component_347387"><p>Fitness Center<br />Indoor Pool<br />Whirlpool<br />Massage<br />Running/Walking Track<br />Racquetball – Handball Courts</p></article>
-        <article class="richtext" id="component_347388"><p><a href="http://www.ymcatwincities.org/locations/woodbury_ymca/">Go to detailed location page</a><br /><a href="http://www.ymcatwincities.org/membership/amenities/">View all location amenities</a></p></article>
+        <article class="richtext" id="component_347388"><p><a href="{{ base_path }}/locations/rochester_ymca">Go to detailed location page</a><br /><a href="http://www.ymcatwincities.org/membership/amenities/">View all location amenities</a></p></article>
 
       </section>
 
