[OYPD-638] Improve theming of Lily theme

--- a/themes/openy_themes/openy_lily/color/preview.css
+++ b/themes/openy_themes/openy_lily/color/preview.css
@@ -15,7 +15,7 @@
   padding: 10px 10px 0 10px;
 }
 .color-preview-logo {
-  background: rgba(0, 0, 0, 0) url("../logo.svg") no-repeat scroll 0 0 / contain;
+  background: rgba(0, 0, 0, 0) url("../logo.png") no-repeat scroll 0 0 / contain;
   height: 56px;
   margin-bottom: -20px;
   width: 72px;
