--- a/themes/openy_themes/openy_lily/sass/modules/_footer.scss
+++ b/themes/openy_themes/openy_lily/sass/modules/_footer.scss
@@ -15,7 +15,7 @@
   }
 
   .footer__brand {
-    background: url("../logo.svg?iefix") no-repeat 0 0;
+    background: url("../logo.png?iefix") no-repeat 0 0;
     background-size: contain;
     display: block;
     height: 56px;
