--- a/themes/openy_themes/openy_lily/sass/paragraphs/_amenities.scss
+++ b/themes/openy_themes/openy_lily/sass/paragraphs/_amenities.scss
@@ -61,7 +61,7 @@
     }
     form {
       margin-bottom: 1em;
-      .webform-options-display-one-column.form-checkboxes {
+      .fieldgroup.form-checkboxes {
         -webkit-columns: 2;
         -moz-columns: 2;
         columns: 2;
