--- a/themes/openy_themes/openy_lily/templates/node/node--blog--teaser.html.twig
+++ b/themes/openy_themes/openy_lily/templates/node/node--blog--teaser.html.twig
@@ -100,7 +100,7 @@ node.field_blog_style.value ? 'blog-' ~ node.field_blog_style.value|clean_class 
             {{ content.field_blog_image }}
           {% else %}
             <div class="default-img">
-              <img src="{{ directory }}/logo.svg">
+              <img src="{{ directory }}/logo.png">
             </div>
           {% endif %}
         {% else %}
