--- a/themes/openy_themes/openy_lily/templates/node/node--news--teaser.html.twig
+++ b/themes/openy_themes/openy_lily/templates/node/node--news--teaser.html.twig
@@ -94,7 +94,7 @@ view_mode ? 'node--view-mode-' ~ view_mode|clean_class,
           {{ content.field_news_image }}
         {% else %}
           <div class="default-img">
-            <img src="{{ directory }}/logo.svg">
+            <img src="{{ directory }}/logo.png">
           </div>
         {% endif %}
       </div>
