--- a/themes/openy_themes/openy_rose/scss/modules/_paragraphs.scss
+++ b/themes/openy_themes/openy_rose/scss/modules/_paragraphs.scss
@@ -933,13 +933,43 @@
 
 .sidebar-region {
   .video-js {
-    width: 100% !important;
-    height: 270px !important;
+    width: 300px !important;
+    height: 200px !important;
+
+    @include breakpoint($screen-xs $screen-sm-max) {
+      width: 180px !important;
+      height: 120px !important;
+    }
+    //@include breakpoint($screen-md) {
+    //  width: 300px !important;
+    //  height: 200px !important;
+    //}
   }
+
   .video-js.vjs-fullscreen {
-    width: 100%!important;
-    height: 100%!important;
-    padding-top: 0!important;
+    width: 100% !important;
+    height: 100% !important;
+    padding-top: 0 !important;
+  }
+}
+
+.video-js {
+  width: 300px !important;
+  height: 200px !important;
+
+  @include breakpoint($screen-xs) {
+    width: 320px !important;
+    height: 240px !important;
+  }
+
+  @include breakpoint($screen-sm) {
+    width: 400px !important;
+    height: 300px !important;
+  }
+
+  @include breakpoint($screen-md) {
+    width: 640px !important;
+    height: 480px !important;
   }
 }
 
