--- a/themes/openy_themes/openy_rose/scss/modules/_blog.scss
+++ b/themes/openy_themes/openy_rose/scss/modules/_blog.scss
@@ -31,15 +31,24 @@
 
   &.node--view-mode-teaser {
     margin: auto;
-    max-width: 373px;
-    width: 100%;
+    @include breakpoint($screen-xs) {
+      max-width: 373px;
+      width: 100%;
+    }
 
     .inner-wrapper {
-      margin: 15px 0;
+      height: 190px;
+      width: 228px;
+      margin: 15px auto;
       position: relative;
       overflow: hidden;
+      @include breakpoint($screen-xs) {
+        height: 288px;
+        width: auto;
+      }
       @include breakpoint($screen-sm) {
         height: 288px;
+        width: auto;
       }
       @include breakpoint($screen-md) {
         height: 245px;
@@ -69,9 +78,12 @@
       font-weight: 500;
 
       h3 {
-        font-size: 28px;
+        font-size: 22px;
         margin-top: 0;
         margin-bottom: 20px;
+        @include breakpoint($screen-xs) {
+          font-size: 28px;
+        }
       }
     }
 
