--- a/themes/openy_themes/openy_lily/sass/misc/_header.scss
+++ b/themes/openy_themes/openy_lily/sass/misc/_header.scss
@@ -396,6 +396,7 @@ header#page-head {
               border: 1px solid rgba(0, 0, 0, 0.15);
               box-shadow: none;
               border-radius: 0;
+              overflow-y: auto;
               li {
                 width: 100%;
                 padding: 0;
