--- a/themes/openy_themes/openy_rose/scss/styles.scss
+++ b/themes/openy_themes/openy_rose/scss/styles.scss
@@ -47,9 +47,11 @@
 @import 'modules/columns';
 @import 'modules/simple_content';
 @import 'modules/location';
+
 // Paragraphs
 @import 'paragraphs/1c';
 @import 'paragraphs/amenities';
+@import 'paragraphs/breadcrumbs';
 @import 'paragraphs/lto';
 
 // Global state classes
