[OYPD-625] Fixes for general focal point issues (#905)
* OYPD-625 fixes for teaser paragraph type to balance image.

* OYPD-625 Fixes for blog and banner to help with focal point issues

* OYPD-625 Previous code adversely affected the small banner

* Should fix the blog teaser tiles

* Removing height from mobile display of blog teaser tile

* Commented out last line instead or removing it

* Updating program teaser image style and adjusting blog tiles to match

* Adding update hook for the image style change in node program category

* More changes for the smallest screen size to fix the blog slider

* adjusting for a larger image. testing only down to 375px

--- a/themes/openy_themes/openy_rose/css/styles.css
+++ b/themes/openy_themes/openy_rose/css/styles.css
@@ -1749,6 +1749,22 @@ body {
   }
 }
 
+@media (min-width: 62em) {
+  .paragraph--type--banner {
+    height: 600px;
+  }
+}
+@media (min-width: 62em) {
+  .paragraph--type--banner img.media__element {
+    bottom: -100%;
+    top: -100%;
+    left: 0;
+    right: 0;
+    margin: auto;
+    position: absolute;
+  }
+}
+
 .banner {
   background-color: #01A490;
   overflow: hidden;
@@ -1781,12 +1797,20 @@ body {
     width: calc(50% + 165px);
   }
 }
-.banner-image img {
+@media (min-width: 62em) {
+  .banner-image .media--image {
+    height: 600px;
+    overflow: hidden;
+    padding-bottom: 0 !important;
+    position: relative;
+  }
+}
+.banner-image img.media__element {
   width: 100% !important;
   height: auto !important;
 }
 @media (min-width: 62em) and (max-width: 75em) {
-  .banner-image img {
+  .banner-image img.media__element {
     width: 120% !important;
   }
 }
@@ -2585,7 +2609,6 @@ body {
     margin-bottom: 0;
   }
   .subprogram-listing-item .image img {
-    max-width: 260px;
     height: auto;
   }
 }
@@ -4090,14 +4113,41 @@ html.js .branch__updates_queue__button {
 }
 .node--type-blog.node--view-mode-teaser {
   margin: auto;
-  max-width: 373px;
-  width: 100%;
+}
+@media (min-width: 30em) {
+  .node--type-blog.node--view-mode-teaser {
+    max-width: 373px;
+    width: 100%;
+  }
 }
 .node--type-blog.node--view-mode-teaser .inner-wrapper {
-  margin: 15px 0;
+  height: 240px;
+  width: 288px;
+  margin: 15px auto;
   position: relative;
   overflow: hidden;
-  height: 250px;
+}
+@media (min-width: 30em) {
+  .node--type-blog.node--view-mode-teaser .inner-wrapper {
+    height: 288px;
+    width: auto;
+  }
+}
+@media (min-width: 48em) {
+  .node--type-blog.node--view-mode-teaser .inner-wrapper {
+    height: 288px;
+    width: auto;
+  }
+}
+@media (min-width: 62em) {
+  .node--type-blog.node--view-mode-teaser .inner-wrapper {
+    height: 245px;
+  }
+}
+@media (min-width: 75em) {
+  .node--type-blog.node--view-mode-teaser .inner-wrapper {
+    height: 300px;
+  }
 }
 .node--type-blog.node--view-mode-teaser img {
   height: auto;
@@ -4117,9 +4167,14 @@ html.js .branch__updates_queue__button {
   font-weight: 500;
 }
 .node--type-blog.node--view-mode-teaser .blog-heading h3 {
-  font-size: 28px;
+  font-size: 22px;
   margin-top: 0;
   margin-bottom: 20px;
+}
+@media (min-width: 30em) {
+  .node--type-blog.node--view-mode-teaser .blog-heading h3 {
+    font-size: 28px;
+  }
 }
 .node--type-blog.node--view-mode-teaser a {
   color: inherit;
