--- a/themes/openy_themes/openy_rose/scss/modules/_paragraphs.scss
+++ b/themes/openy_themes/openy_rose/scss/modules/_paragraphs.scss
@@ -422,6 +422,23 @@
   }
 }
 
+.paragraph--type--banner {
+  @include breakpoint($screen-desktop) {
+    height: 600px;
+  }
+
+  img.media__element {
+    @include breakpoint($screen-desktop) {
+      bottom: -100%;
+      top: -100%;
+      left: 0;
+      right: 0;
+      margin: auto;
+      position: absolute;
+    }
+  }
+}
+
 .banner {
   background-color: $yet-another-green;
   overflow: hidden;
@@ -446,7 +463,16 @@
       width: calc(50% + #{ceil($container-large-desktop/6 - $grid-gutter-width)});
     }
 
-    img {
+    .media--image {
+      @include breakpoint($screen-desktop) {
+        height: 600px;
+        overflow: hidden;
+        padding-bottom: 0 !important;
+        position: relative;
+      }
+    }
+
+    img.media__element {
       width: 100% !important;
       height: auto !important;
 
