#846 Add breadcrumb region to the openy_rose theme

--- a/themes/openy_themes/openy_rose/templates/page/page.html.twig
+++ b/themes/openy_themes/openy_rose/templates/page/page.html.twig
@@ -126,7 +126,11 @@
 
     {{ page.header }}
 
-    {{ page.breadcrumb }}
+    <div class="breadcrumbs">
+      <div class="container">
+        {{ page.breadcrumb }}
+      </div>
+    </div>
 
     {{ page.highlighted }}
 
