--- a/themes/openy_themes/openy_lily/sass/modules/_dialog.scss
+++ b/themes/openy_themes/openy_lily/sass/modules/_dialog.scss
@@ -37,6 +37,10 @@ body .branch-popup {
         background-color: $lighter-grey;
       }
 
+      &:first-child {
+        width: 100%;
+      }
+
       input {
         margin: 7px 0 0 0;
         position: absolute;
@@ -48,6 +52,7 @@ body .branch-popup {
         font-size: 14px;
         margin: 0;
         padding-left: 20px;
+        font-weight: bold;
       }
     }
 
