--- a/themes/openy_themes/openy_rose/css/styles.css
+++ b/themes/openy_themes/openy_rose/css/styles.css
@@ -7262,6 +7262,35 @@ article .node--view-mode-flexible-content h2 a span {
   width: 13px;
 }
 
+.breadcrumbs {
+  background-color: #333333;
+}
+@media (max-width: 480px) {
+  .breadcrumbs {
+    display: none;
+  }
+}
+.breadcrumbs ol {
+  list-style: none;
+  margin-bottom: 0;
+  padding-left: 0;
+}
+.breadcrumbs ol li {
+  color: #ccc;
+  display: inline-block;
+  font-family: "Cachet W01 Book", Verdana, sans-serif;
+  font-size: 16px;
+  line-height: 1.88;
+  padding-right: 12px;
+}
+.breadcrumbs ol li:not(:last-child):after {
+  content: '/';
+  padding-left: 12px;
+}
+.breadcrumbs ol a {
+  color: #fff;
+}
+
 .paragraph-1c-wrapper {
   padding-bottom: 30px;
 }
