--- a/themes/openy_themes/openy_rose/scss/styles.scss
+++ b/themes/openy_themes/openy_rose/scss/styles.scss
@@ -47,6 +47,8 @@
 @import 'modules/columns';
 @import 'modules/simple_content';
 @import 'modules/location';
+@import 'modules/breadcrumbs';
+
 // Paragraphs
 @import 'paragraphs/1c';
 @import 'paragraphs/amenities';
